static/style.css
@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Open+Sans:wght@400;700&display=swap");

* {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

:root {
  --blue1: #c6b7f1;
  --blue2: #1c7ebb;
  --pink: #e22f8a;

  --blue2_hover: #67b3ff;
}

html {
  scroll-behavior: smooth;
  font-family: "Open Sans", sans-serif;
}

body {
  margin: 0;

  &::-webkit-scrollbar {
    width: 7px
  }

  &::-webkit-scrollbar-track {
    background-color: white
  }

  &::-webkit-scrollbar-thumb {
    background-color: var(--blue2);

    &:hover {
      background-color: -var(--pink)
    }
  }

  & a {
    display: inline-block;
    color: black;
    text-decoration: none;
    transition: color 0.2s ease, transform 0.2s ease;

    &:hover {
      color: var(--blue2);
    }
  }

  & button {
    border: none;
    cursor: pointer;
    font-family: inherit;
    background-color: white;
  }

  & h1,
  h2 {
    margin: 0;
  }

  & b {
    font-weight: 700;
  }

  & img {
    user-select: none;
  }
}

header {
  top: 0;
  z-index: 1;
  position: sticky;
  height: 60px;
  line-height: 60px;
  font-size: 16px;
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
  background-color: white;
  box-shadow: 0 6px 13px -7px rgb(0 0 0 / 20%);

  & nav {
    gap: 30px;
    float: right;
    display: flex;
    align-items: center;
    height: 100%;
    font-size: 30px;
    padding-right: 30px;
  }

  #logo {
    float: left;
    font-size: 28px;
    padding-left: 30px;

    &::before {
      font-family: "Font Awesome 6 Free";
      content: "\f11b";
    }

    &::after {
      content: "PGD";
    }
  }

  .logo_ci {
    width: 35px;
  }
}


#intro {
  display: flex;
  height: 100vh;
  width: 100%;
  background: url('images/background.webp') fixed center no-repeat;
  background-size: cover;
  justify-content: center;

  & #intro-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    width: fit-content;
    padding: 15% 15% 0 15%;

    & img {
      margin-bottom: 10px;
    }

    & h2 {
      display: block;
      color: white;
      text-align: center;
      font-size: 2.5em;
      margin-bottom: 10px;
    }
  }
}

#cta {
  color: white;
  display: block;
  font-size: 1.5rem;
  font-weight: 700;
  text-align: center;
  transition: all 0.2s ease, transform 0.1s ease;

  width: 100%;
  padding: 10px 0;
  border-radius: 5px;
  background-color: var(--blue2);
  border: var(--blue2) solid 2px;

  &:hover {
    transform: none;
    background-color: var(--blue2_hover);
    border: var(--blue2_hover) solid 2px;
  }

  &:active {
    transform: scale(0.98);
  }
}

section {
  scroll-margin-top: 65px;

  &:nth-child(2n) {
    background-color: var(--blue1)
  }

  & h2 {
    font-size: 32px;
    font-weight: 700;
    text-transform: uppercase;
    font-family: "Montserrat", sans-serif;
    margin-bottom: 45px;

    &::after {
      content: "";
      display: block;
      position: absolute;
      width: 62px;
      height: 2px;
      margin-top: 15px;
      left: calc(50% - 32px);
      background-color: black;
    }
  }

  & p {
    font-size: 1.1rem;
    margin-bottom: 20px;
  }

  & #notice {
    color: #6d6565;
    font-style: italic;
    font-size: 0.75rem;
    margin-bottom: 0;
  }
}

& .container {
  max-width: 65vw;
  margin: 0 auto;
  padding: 50px 0;
  text-align: center;
}

.grid {
  gap: 10px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  & .column {
    min-width: 0;
    max-width: 275px;
    background-color: white;
    border-radius: 5px;
  }

  & img {
    height: auto;
    max-width: 50%;
    vertical-align: bottom;
  }

  & span {
    display: block;
  }

  & .name {
    font-weight: 700;
    font-size: 18px;
    padding-top: 4%;
    border-top: var(--blue1) solid 4px;
  }

  & .red {
    color: red;
    font-weight: bold;
  }

  & .role {
    font-size: 14px;
    font-style: italic;
    margin-bottom: 4%;
  }
}


#inscriptions {
  & img {
    max-width: 65%;
    padding: 4% 0;
  }
}

#schedule table {
  margin: 25px auto;
  border-collapse: collapse;
  border: 1.5px solid black;
  background-color: var(--blue2);

  & th {
    padding: 0;
    height: 15px;
  }

  & td,
  th {
    padding: 5px;
    font-weight: 700;

    &:not(:first-child) {
      width: 250px;
      height: 30px;
      padding: 5px;
      text-transform: uppercase;
      border: 1.5px solid black;
    }

    &:first-child {
      top: -23px;
      height: 35px;
      position: relative;
      font-size: 0.8rem;
      text-align: right;
      border-right: 1.5px solid black;
    }
  }

  & .loltab {
    background-color: #8289eb;
  }

  & .crtab {
    background-color: #dd5858;
  }

  & .tmtab {
    background-color: #92d889;
  }

  & .pause,
  .snack {
    background-color: #ffbaf9;
  }

  & .repas {
    background-color: #ffffff;
  }

  & .empty {
    border: none !important;
    background-color: #ffffff5d;
  }
}

#sponsors a:first-child img {
  margin-left: 0;
}

#sponsors img {
  width: auto;
  height: 150px;
  margin-left: 40px;
  margin-bottom: 20px;

  border-radius: 5px;
  vertical-align: middle;
  transition: transform 0.2s ease;

  &:hover {
    transform: scale(1.05);
    -webkit-transform: scale(1.05);
  }
}


#staff .grid {
  & .column {
    background-color: var(--blue1);
  }

  & .name {
    border-top: white solid 4px;
  }
}


#footer {
  padding: 20px 0;
  text-align: center;
  background-color: white;
  box-shadow: 0 -6px 13px -7px rgb(0 0 0 / 20%);
}


#scrollTopBtn {
  z-index: 1;
  opacity: 0;
  position: fixed;
  bottom: 20px;
  right: 20px;
  padding: 12px 15px;
  border-radius: 50%;
  font-size: 17px;
  background-color: var(--blue2);
  transition: background-color 0.2s ease, transform 0.2s ease, opacity 0.2s ease;

  &:hover {
    background-color: var(--pink);
  }

  &:active {
    transform: scale(0.9);
    -webkit-transform: scale(0.9);
  }
}


#mentions {
  background-color: white;

  & p {
    margin: 0;
    padding: 0;
    text-align: justify;

    &:last-child {
      margin-bottom: 50px;
    }
  }

  & .container {
    padding: 0
  }

  & h2 {
    padding-top: 50px
  }
}


#error {
  background-color: white;
  position: absolute;
  top: 45%;
  left: 50%;
  -ms-transform: translate(-45%, -50%);
  transform: translate(-45%, -50%);
}

@media (max-width: 600px) {
  header nav {
    gap: 15px;

    .fa-youtube,
    .fa-twitch {
      display: none;
    }
  }

  #intro {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    & #intro-container {
      width: 80%;
      padding: 0;
      margin-top: -20%;
      text-align: center;
    }

    & h1::after {
      margin: 0;
      margin-bottom: 10px;
      white-space: pre-wrap;
      content: "23 Mars 2024\A 7e édition";
    }

    & #cta {
      margin: 0;
      width: 100%;
    }
  }

  section {
    & .container {
      max-width: 80vw;
    }

    & p {
      font-size: 16px;
    }

    & h2 {
      font-size: 26px;
    }
  }

  #sponsors img {
    width: 60%;
    height: auto;

    &:first-child {
      height: auto;
    }
  }
}

@media (max-width: 500px) {
  #sponsors img {
    width: 80%;
  }
}

.centered {
  width: 100%;
}

#modal-info {
  display: flex;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 100;
  text-align: center;
  background-color: #ffffff;
  font-size: 3rem;
  padding: 5px;
  padding-top: 30px;
  padding-bottom: 20px;
  justify-content: space-around;
}

.icon-button {
  display: flex;
  border-radius: 50px;
  padding: 4px;
  width: 36px;
  height: 36px;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 10px;
  right: 10px;

  &:hover {
    background-color: #c6c6c6;
  }
}

.tobecontinued {
  user-select: none;
  display: block;
  position: relative;
  background-color: #ff0000c0;
  transition: none;
  font-size: 100px;
  padding-left: 100px;
  padding-right: 100px;
}
#tobecontinued1 {
  rotate: 35deg;
  top: 400px;
}

#tobecontinued2 {
  rotate: -10deg;
  top: 200px;
  z-index: 1000;
}

